objects/Time_and_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Intacct_Recon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check off if SF = Intacct</inlineHelpText>
        <label>Intacct Recon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MV_Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Report owner - to be reimbursed.</inlineHelpText>
        <label>MV Employee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time and Expenses</relationshipLabel>
        <relationshipName>Time_and_Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TE_Period__c</fullName>
        <inlineHelpText>Date of Time and Expense Period</inlineHelpText>
        <label>TE Period</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TE_Total__c</fullName>
        <label>TE Total</label>
        <summarizedField>Time_and_Expense_Detail__c.Amount__c</summarizedField>
        <summaryForeignKey>Time_and_Expense_Detail__c.Time_and_Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Time and Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Intacct_Recon__c</columns>
        <columns>MV_Employee__c</columns>
        <columns>TE_Period__c</columns>
        <columns>TE_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>TE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time and Expenses</pluralLabel>
    <recordTypes>
        <fullName>Time_and_Expense</fullName>
        <active>true</active>
        <label>Time and Expense</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>